[tool.poetry]
name = "Metrum"
version = "1.0.0"
description = "Autorski bot muzyczny Quanoska!"
authors = ["Quanosek"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
discord-py-slash-command = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
